// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TentativeButton when not tentative renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Tentative"
>
  <pure(HelpOutlineOutlinedIcon)
    className="test"
  />
</WithStyles(IconButton)>
`;

exports[`TentativeButton when tentative renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Tentative"
>
  <pure(HelpTwoToneIcon)
    className="test"
    color="primary"
  />
</WithStyles(IconButton)>
`;
